Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.3.0 Beta1
-
Fix Version/s: None
-
Component/s: GUI: OpenGL
-
Labels:None
-
Environment:OSX 10.6.8, XCode 3.2, MacOSX10.6.sdk
Description
In:
qtbase/src/gui/opengl/qopenglfunctions.cpp
[3324] TexImage2D = ::glTexImage2D;
Yields:
opengl/qopenglfunctions.cpp:3324: error: invalid conversion from ‘void (GLenum, GLint, GLenum, GLsizei, GLsizei, GLint, GLenum, GLenum, const GLvoid*)’ to ‘void
(GLenum, GLint, GLint, GLsizei, GLsizei, GLint, GLenum, GLenum, const GLvoid*)’
Likely to due older version of OSX + XCode (OSX 10.6.8, XCode 3.2)
Attachments
Issue Links
- is required for
-
QTBUG-37065 Issues to be fixed before 5.3.0 RC1 release
-
- Closed
-